@@ -1,3 +1,7 @@
+2000-08-23  Daniel Bonniot <bonniot@cma.ensmp.fr>
+
+	* SetExp.java (compile):  Handle more cases of needValue.
+
 2000-08-17  Per Bothner  <per@bothner.com>
 
 	* SetExp.java (compile):  Add check for !comp.usingCPStyle().
